--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -33,3 +33,12 @@ button {
   border-radius: 4px;
   cursor: pointer;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+li {
+  list-style-type: none;
+}
