--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -39,7 +39,7 @@ button, input, textara {
   font-size: 16px;
 }
 
-button {
+button.default {
   line-height: 1.5;
   color: var(--color-white);
   border: 1px solid var(--color-primary);
